# gdie

./: Cargo.toml  README.md  gdie-deb.deb
gdie-deb/DEBIAN/: control
gdie-deb/usr/share/applications/: gdie.desktop
resources/: gdie.desktop
src/: main.rs
